@@ -38,7 +38,3 @@ td.ep_columns_cell_deletion {
 	border-left: 1px dashed #ccc;
 	border-bottom: 1px solid #888;
 }
-td.ep_columns_cell_first {
-	border-left: none;
-}
-
