@@ -7218,3 +7218,7 @@ PACKAGE: 2.2.99.2
 2008-03-31 cjg
  * Added a bunch of obscure missing phrases.
 
+2008-04-01 cjg
+ * Added column add/delete/rearrange options to Item and Review.
+ * Made user.items_fields and user.review_fields volatile.
+ * Removed those fields from the default user workflow.
